# scheduler-gtest

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  OS.h  PCB.h  README.md  disk.h  main.cpp
.github/workflows/: build.yml
benchmarks/: README.md  run_benchmarks.sh  scenarios.json
include/algorithms/: fcfs.hpp  priority.hpp  round_robin.hpp  sjf.hpp
include/core/: scheduler.hpp  simulator.hpp
include/utils/: visualization.hpp
src/: CMakeLists.txt  main.cpp
src/core/: scheduler.cpp  simulator.cpp
tests/: CMakeLists.txt  scheduler_test.cpp
workloads/: example.json
